Fix jump issue on Safari

--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -115,6 +115,7 @@ body{
     font-size: 112px;
     text-transform: uppercase;
     //padding-top: 20px;
+    float:left;
 
     &:focus {
       outline-offset: 0px;
